Bug 1391255. Crash earlier if recording playback fails. r=kats

This should help us narrow down what's going wrong a bit.

MozReview-Commit-ID: 2Ah0nMCwv55

--HG--
extra : rebase_source : fae57d36fe28b364fc652fb0e32abbbf8da43b0e